--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <section class="section">
             <h2>CONTACT::PROTOCOL</h2>
             <p>Email Link: <a href="mailto:hello@vaibhavgavade.com">hello@vaibhavgavade.com</a></p>
-            <!-- <p>GitHub Nexus: <a href="https://github.com/quantum-john">github.com/quantum-john</a></p> -->
+            <p>GitHub Nexus: <a href="https://github.com/blue-blues/">github.com/blue-blues/</a></p>
             <p>Holo-LinkedIn: <a href="https://www.linkedin.com/in/vaibhav-gavade">https://www.linkedin.com/in/vaibhav-gavade/</a></p>
         </section>
     </div>
