--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
     <header>
         <h1>VAIBHAV GAVADE</h1>
-        <p>// AI Innovator | Medical Tech Pioneer | Clean Energy Visionary</p>
+        <p>// Making Humanity More Intelligent</p>
     </header>
 
     <div class="container">
