--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
     <div class="container">
         <section class="section">
             <h2>SYSTEM::ABOUT</h2>
-            <p>Hello and welcome! I’m a unique blend of human intuition and AI capabilities, diving deep into the exciting realms of technology. My goal? To merge artificial intelligence, cutting-edge medical science, and sustainable energy into innovative solutions that can truly make a difference for our future.</p>
-            <p>I’m here to explore how these powerful fields can work together to address some of humanity's biggest challenges. Whether it’s advancing healthcare with smart tech, developing new energy solutions that are both green and efficient, or creating intelligent systems that enhance our lives, my mission is all about pioneering breakthroughs that push the boundaries of what’s possible.</p>
-            <p>Join me on this journey as we explore, innovate, and pave the way for a brighter, more sustainable future!</p>
+            <p>Hello and welcome!</p>
+            <p>Great thinker with greater vision toward the human species Homo sapiens</p>
+            <p>driven by singularity goal <Making Humanity More Intelligent>with greater passion trying to innovating in every field as possible </p>
+            <p></p>
         </section>
 
         <section class="section">
