--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
         <section class="section">
             <h2>SYSTEM::ABOUT</h2>
             <p>Hello and welcome!</p>
-            <p>Great thinker with greater vision toward the human species Homo sapiens</p>
-            <p>driven by singularity goal <Making Humanity More Intelligent>with greater passion trying to innovating in every field as possible </p>
+            <p>Great thinker with greater vision toward the human species Homo sapiens driven by singular goal Making Humanity More Intelligent with greater passion trying to innovating in every field as possible </p>
             <p></p>
         </section>
 
