--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
         <section class="section">
             <h2>SYSTEM::ABOUT</h2>
             <p>Hello and welcome!</p>
-            <p>Great thinker with greater vision toward the human species Homo sapiens driven by singular goal Making Humanity More Intelligent with greater passion trying to innovating in every field as possible </p>
-            <p></p>
+            <p>A visionary thinker with a profound dedication to the evolution of humanity, aiming to elevate Homo sapiens to new heights.</p>
+            <p>Driven by the singular goal of <strong>Making Humanity More Intelligent</strong>, fueled by an unwavering passion for innovation across diverse fields.</p>
+            <p>Guided by a grand mission to explore the cosmos and uncover molecules in space,finding new molecules in cosmos, with a deep-rooted interest in technology and the wonders of the universe space.</p>
+            
         </section>
 
         <section class="section">
